3/6/14 #37 fix Reset All for graph in 'Custom' screen, use PropertySet for all properties internal to GraphNode
3/6/14 #35 fix Reset All for pH meters, add expandedProperty to viewProperties for both graph and pH meter
# 1.0.0-dev.19 3/5/14
3/5/14 fix potential ordering dependency in how value is positioned in graph indicator
3/5/14 restore 'ratio' feature in production version
3/5/14 #25 ratio performance enhancements: use Float32Array if available, pre-allocate max array size, replace Util.toFixedNumber with Math.round
3/5/14 #25 ratio: store molecule locations so that they don't move when solution volume changes and pH remains constant
3/5/14 #24 ratio: added workaround for clipping issue, general problem is scenery#200
3/5/14 exclude 'ratio' feature from production version until we work out issues
# 1.0.0-dev.18 3/5/14
3/5/14 pH meter: replace picker with up/down arrow buttons
3/4/14 port strings from Java
3/4/14 pH Meter: increase height of touch area for pH picker, increase space between pH picker and expand/collapse button
# 1.0.0-dev.17 3/4/14
3/4/14 ratio: increase to 3000 molecules, 1000 wasn't showing obvious differences for pH values in the 'linear' range
3/4/14 #23 stylistic, remove curly braces around layout code in MoleculeCountNode
3/4/14 #10 change ScientificNotationNode to use Property instead of setValue
3/3/14 #16 add note about indicator code to JSdoc
3/4/14 #22 stylistic, add blank lines before some comments
# 1.0.0-dev.16 2/28/14
3/4/14 RatioNode cleanup
3/4/14 enable 'ratio' feature in production version, since it's now usable on all platforms
3/4/14 ratio: use scenery to create molecule images, which are then drawn directly to canvas
3/4/14 delete node-per-molecule strategy from 'ratio' feature since it's unusably slow
3/4/14 increase performance of 'ratio' feature by using drawImage instead of arc
3/4/14 tweak spacing in 'H3O+/OH-' label
3/4/14 tweak the y-spacing above and below the beaker controls