@@ -118,12 +118,12 @@ define( function( require ) {
       dropperFluidNode,
       dropperNode,
       solutionNode,
+      pHMeterNode,
       ratioNode,
       beakerNode,
       moleculeCountNode,
       volumeIndicatorNode,
       beakerControls,
-      pHMeterNode,
       graphNode,
       resetAllButton,
       soluteComboBox,
