@@ -1,3 +1,5 @@
+3/6/14 move pH probe from 'center' to 'right' position for 'Custom' screen, move meter slightly to left so probe doesn't hit molecule counts
+3/6/14 move pH probe behind ratio and molecule counts, so that it doesn't obscure these and looks more like probe is in solution
 3/6/14 #37 fix Reset All for graph in 'Custom' screen, use PropertySet for all properties internal to GraphNode
 3/6/14 #35 fix Reset All for pH meters, add expandedProperty to viewProperties for both graph and pH meter
 # 1.0.0-dev.19 3/5/14
